<resources>
    <!-- MainActivity strings -->
    <string name="app_name">SmartSniff</string>
    <string name="scan_button_standby">Escanear</string>
    <string name="scan_button_stop">Parar</string>
    <string name="action_settings">Configuración</string>
    <string name="action_store_local">Guardar datos</string>
    <string name="action_send_data">Enviar datos</string>
    <string name="action_delete_data">Borrar datos</string>
    <string name="init_date">Fecha de inicio:</string>
    <string name="discoveries">Nº. hallazgos:</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="energy_saving_text">Modo ahorro de batería</string>
    <string name="energy_saving_explanation">Si activa el modo ahorro de energía, el teléfono obtendrá la localización del dispositivo a través de Internet, en lugar del GPS.</string>
    <string name="interval_text">Intervalo de escaneo</string>
    <string name="interval_explanation">Tiempo, en segundos, que transcurre entre escaneos de dispositivos. (De 2 a
        10 segundos)</string>
    <string name="default_configuration">Configuración por defecto</string>
    <string name="save_configuration">Guardar</string>
    <string name="delete_alert_dialog_message">Va a eliminar todos los datos de la base de datos interna del dispositivo.
        Esta operación no se puede deshacer. ¿Está seguro de querer proceder?</string>
    <string name="delete_alert_dialog_title">Alerta - Eliminación de datos</string>
    <string name="delete_alert_dialog_possitive_button">Sí, borrar los datos</string>
    <string name="delete_alert_dialog_negative_button">No, cancelar</string>
</resources>
