<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_send_data"
        android:orderInCategory="200"
        android:title="@string/action_send_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_data"
        android:orderInCategory="300"
        android:title="@string/action_delete_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>
</menu>